--- a/Projects/Architecture3.WebApi/Architecture3.Web.csproj
+++ b/Projects/Architecture3.WebApi/Architecture3.Web.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Architecture3.WebApi</RootNamespace>
-    <AssemblyName>Architecture3.WebApi</AssemblyName>
+    <RootNamespace>Architecture3.Web</RootNamespace>
+    <AssemblyName>Architecture3.Web</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
