--- a/Projects/Architecture3.WebApi/packages.config
+++ b/Projects/Architecture3.WebApi/packages.config
@@ -2,15 +2,21 @@
 <packages>
   <package id="AutoMapper" version="5.0.2" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="SimpleInjector" version="3.2.0" targetFramework="net461" />
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.0" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web" version="3.2.0" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="3.2.0" targetFramework="net461" />
   <package id="SimpleInjector.Integration.WebApi" version="3.2.0" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Swashbuckle.Core" version="5.3.2" targetFramework="net461" />
