--- a/Projects/Architecture3.WebApi/Architecture3.Web.csproj
+++ b/Projects/Architecture3.WebApi/Architecture3.Web.csproj
@@ -169,12 +169,12 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\VersionController.cs" />
-    <Compile Include="Infrastructure\GlobalExceptionLogger.cs" />
+    <Compile Include="Infrastructure\GlobalWebApiExceptionLogger.cs" />
+    <Compile Include="Infrastructure\GlobalLoggerHttpModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Site.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
