--- a/Projects/Architecture3.WebApi/Architecture3.Web.csproj
+++ b/Projects/Architecture3.WebApi/Architecture3.Web.csproj
@@ -175,6 +175,9 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Static\Forbidden.html" />
+    <Content Include="Static\NotFound.html" />
+    <Content Include="Static\Error.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
