--- a/Projects/Architecture3.WebApi/Web.config
+++ b/Projects/Architecture3.WebApi/Web.config
@@ -11,6 +11,14 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <!--in dev <httpErrors errorMode="Detailed" existingResponse="Auto">-->
+    <!--in test, prod <httpErrors errorMode="Custom" existingResponse="Replace">-->
+    <httpErrors errorMode="Detailed" existingResponse="Auto">
+      <clear />
+      <error statusCode="403" responseMode="ExecuteURL" path="/Static/Forbidden.html" />
+      <error statusCode="404" responseMode="ExecuteURL" path="/Static/NotFound.html" />
+      <error statusCode="500" responseMode="ExecuteURL" path="/Static/Error.html" />
+    </httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
