--- a/Projects/Architecture3.WebApi/Web.config
+++ b/Projects/Architecture3.WebApi/Web.config
@@ -35,9 +35,9 @@
     <!--in test, prod <httpErrors errorMode="Custom" existingResponse="Replace">-->
     <httpErrors errorMode="Detailed" existingResponse="Auto">
       <clear />
-      <error statusCode="403" responseMode="ExecuteURL" path="/Static/Forbidden.html" />
-      <error statusCode="404" responseMode="ExecuteURL" path="/Static/NotFound.html" />
-      <error statusCode="500" responseMode="ExecuteURL" path="/Static/Error.html" />
+      <error statusCode="403" responseMode="ExecuteURL" path="/Static/HttpErrors/Forbidden.html" />
+      <error statusCode="404" responseMode="ExecuteURL" path="/Static/HttpErrors/NotFound.html" />
+      <error statusCode="500" responseMode="ExecuteURL" path="/Static/HttpErrors/Error.html" />
     </httpErrors>
   </system.webServer>
   <runtime>
