--- a/Projects/Architecture3.WebApi/Static/Web.config
+++ b/Projects/Architecture3.WebApi/Static/Web.config
@@ -5,6 +5,8 @@
       <remove name="BlockViewHandler"/>
       <add name="JavaScript" path="*.js" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
       <add name="Html" path="*.html" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
+      <add name="Map" path="*.map" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
+      <add name="Css" path="*.css" verb="GET,HEAD" type="System.Web.StaticFileHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
   </system.webServer>
