--- a/Projects/Architecture3.WebApi/Architecture3.Web.csproj
+++ b/Projects/Architecture3.WebApi/Architecture3.Web.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Apis\VersionController.cs" />
     <Compile Include="Infrastructure\GlobalWebApiExceptionLogger.cs" />
     <Compile Include="Infrastructure\GlobalLoggerHttpModule.cs" />
+    <Compile Include="Pages\Home\IndexViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -201,6 +202,10 @@
     <ProjectReference Include="..\Architecture3.Types\Architecture3.Types.csproj">
       <Project>{9033BA8A-C531-4DCD-A342-A4B57DDD11D9}</Project>
       <Name>Architecture3.Types</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Architecture3.WebApi.Client\Architecture3.Common.Web.csproj">
+      <Project>{800FD538-82D0-43DF-8D2C-618C2327B15E}</Project>
+      <Name>Architecture3.Common.Web</Name>
     </ProjectReference>
     <ProjectReference Include="..\Architecture3.WebApi.Dtos\Architecture3.Web.Dtos.csproj">
       <Project>{D383FC01-3AB8-4106-98EA-543607ACE0E9}</Project>
