--- a/Projects/Architecture3.Web/Architecture3.Web.csproj
+++ b/Projects/Architecture3.Web/Architecture3.Web.csproj
@@ -165,13 +165,13 @@
     <Compile Include="App_Start\RegisterWebApiMiscs.cs" />
     <Compile Include="App_Start\RegisterWebApiRoutes.cs" />
     <Compile Include="App_Start\RegisterSwagger.cs" />
-    <Compile Include="Apis\Base\BaseApiController.cs" />
+    <Compile Include="Infrastructure\BaseWebApiController.cs" />
+    <Compile Include="Infrastructure\BaseMvcPageController.cs" />
     <Compile Include="Pages\Home\HomeController.cs" />
     <Compile Include="Apis\ProductsController.cs" />
     <Compile Include="Apis\VersionController.cs" />
     <Compile Include="Infrastructure\GlobalWebApiExceptionLogger.cs" />
     <Compile Include="Infrastructure\GlobalLoggerHttpModule.cs" />
-    <Compile Include="Pages\Home\IndexViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -242,6 +242,7 @@
     <Content Include="Static\Scripts\maps\bootstrap.min.js.map" />
     <Content Include="Static\Scripts\maps\jquery.min.js.map" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
