--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -59,22 +59,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoMapperConfiguration.cs" />
-    <Compile Include="CQ\Home\Index\QueryHandler.cs" />
-    <Compile Include="CQ\Product\Delete\Command.cs" />
-    <Compile Include="CQ\Product\Delete\CommandHandler.cs" />
-    <Compile Include="CQ\Product\Delete\Interfaces\IRepository.cs" />
-    <Compile Include="CQ\Product\Delete\Repository.cs" />
-    <Compile Include="CQ\Product\Get\Repository.cs" />
-    <Compile Include="CQ\Product\Post\Command.cs" />
-    <Compile Include="CQ\Product\Post\CommandHandler.cs" />
-    <Compile Include="CQ\Product\Post\Interfaces\IRepository.cs" />
-    <Compile Include="CQ\Product\Post\Repository.cs" />
-    <Compile Include="CQ\Product\Put\Command.cs" />
-    <Compile Include="CQ\Product\Put\CommandHandler.cs" />
-    <Compile Include="CQ\Product\Put\Repository.cs" />
-    <Compile Include="CQ\Product\SharedQueries.cs" />
-    <Compile Include="CQ\Product\ValueObjects\Code.cs" />
-    <Compile Include="CQ\Product\ValueObjects\Name.cs" />
+    <Compile Include="CQ\Pages\Home\Index\QueryHandler.cs" />
+    <Compile Include="CQ\Apis\Product\Delete\Command.cs" />
+    <Compile Include="CQ\Apis\Product\Delete\CommandHandler.cs" />
+    <Compile Include="CQ\Apis\Product\Delete\Interfaces\IRepository.cs" />
+    <Compile Include="CQ\Apis\Product\Delete\Repository.cs" />
+    <Compile Include="CQ\Apis\Product\Get\Repository.cs" />
+    <Compile Include="CQ\Apis\Product\Post\Command.cs" />
+    <Compile Include="CQ\Apis\Product\Post\CommandHandler.cs" />
+    <Compile Include="CQ\Apis\Product\Post\Interfaces\IRepository.cs" />
+    <Compile Include="CQ\Apis\Product\Post\Repository.cs" />
+    <Compile Include="CQ\Apis\Product\Put\Command.cs" />
+    <Compile Include="CQ\Apis\Product\Put\CommandHandler.cs" />
+    <Compile Include="CQ\Apis\Product\Put\Repository.cs" />
+    <Compile Include="CQ\Apis\Product\SharedQueries.cs" />
+    <Compile Include="CQ\Apis\Product\ValueObjects\Code.cs" />
+    <Compile Include="CQ\Apis\Product\ValueObjects\Name.cs" />
     <Compile Include="CQ\TemplateMethods\Commands\DeleteCommandHandlerTemplate.cs" />
     <Compile Include="CQ\TemplateMethods\Commands\Interfaces\IIdVersion.cs" />
     <Compile Include="CQ\TemplateMethods\Commands\Interfaces\IDeleteRepository.cs" />
@@ -85,25 +85,25 @@
     <Compile Include="CQ\TemplateMethods\Queries\Interfaces\IId.cs" />
     <Compile Include="Database\DbConnectionProvider.cs" />
     <Compile Include="Facades\Base\Helper.cs" />
-    <Compile Include="Facades\HomeIndexFacade.cs" />
-    <Compile Include="Facades\ProductsDeleteFacade.cs" />
-    <Compile Include="Facades\ProductsPostFacade.cs" />
-    <Compile Include="Facades\ProductsPutFacade.cs" />
+    <Compile Include="Facades\Pages\HomeIndexFacade.cs" />
+    <Compile Include="Facades\Apis\ProductsDeleteFacade.cs" />
+    <Compile Include="Facades\Apis\ProductsPostFacade.cs" />
+    <Compile Include="Facades\Apis\ProductsPutFacade.cs" />
     <Compile Include="Shared\Error.cs" />
-    <Compile Include="Facades\ProductsFilterPagedFacade.cs" />
-    <Compile Include="Facades\ProductsGetFacade.cs" />
+    <Compile Include="Facades\Apis\ProductsFilterPagedFacade.cs" />
+    <Compile Include="Facades\Apis\ProductsGetFacade.cs" />
     <Compile Include="Shared\ErrorType.cs" />
-    <Compile Include="Facades\VersionGetFacade.cs" />
+    <Compile Include="Facades\Apis\VersionGetFacade.cs" />
     <Compile Include="Database\Interfaces\IDbConnectionProvider.cs" />
-    <Compile Include="CQ\Product\FilterPaged\Product.cs" />
-    <Compile Include="CQ\Product\FilterPaged\QueryHandler.cs" />
-    <Compile Include="CQ\Product\FilterPaged\Query.cs" />
-    <Compile Include="CQ\Product\Get\Product.cs" />
-    <Compile Include="CQ\Product\Get\Query.cs" />
-    <Compile Include="CQ\Product\Get\QueryHandler.cs" />
+    <Compile Include="CQ\Apis\Product\FilterPaged\Product.cs" />
+    <Compile Include="CQ\Apis\Product\FilterPaged\QueryHandler.cs" />
+    <Compile Include="CQ\Apis\Product\FilterPaged\Query.cs" />
+    <Compile Include="CQ\Apis\Product\Get\Product.cs" />
+    <Compile Include="CQ\Apis\Product\Get\Query.cs" />
+    <Compile Include="CQ\Apis\Product\Get\QueryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CQ\Version\Get\QueryHandler.cs" />
-    <Compile Include="CQ\Version\Get\Query.cs" />
+    <Compile Include="CQ\Apis\Version\Get\QueryHandler.cs" />
+    <Compile Include="CQ\Apis\Version\Get\Query.cs" />
     <Compile Include="Shared\ErrorResultExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -135,6 +135,7 @@
       <Name>Architecture3.Web.Dtos</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\Fody.1.29.4\build\dotnet\Fody.targets" Condition="Exists('..\..\packages\Fody.1.29.4\build\dotnet\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
