--- a/Tests/Architecture3.Logic.Tests/Architecture3.Logic.Tests.csproj
+++ b/Tests/Architecture3.Logic.Tests/Architecture3.Logic.Tests.csproj
@@ -60,8 +60,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CQ\Product\Delete\CommandHandlerTests.cs" />
-    <Compile Include="CQ\Product\Delete\CommandTests.cs" />
+    <Compile Include="CQ\Apis\Product\Delete\CommandHandlerTests.cs" />
+    <Compile Include="CQ\Apis\Product\Delete\CommandTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MappingTests.cs" />
   </ItemGroup>
