--- a/Projects/Architecture3.Common.Web/Architecture3.Common.Web.csproj
+++ b/Projects/Architecture3.Common.Web/Architecture3.Common.Web.csproj
@@ -86,6 +86,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPageModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helper.cs" />
   </ItemGroup>
