--- a/Tests/Architecture3.Common.Web.Tests/packages.config
+++ b/Tests/Architecture3.Common.Web.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net461" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
+  <package id="Shouldly" version="2.8.2" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
 </packages>
