--- a/Tests/Architecture3.Types.Tests/Architecture3.Types.Tests.csproj
+++ b/Tests/Architecture3.Types.Tests/Architecture3.Types.Tests.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FunctionalExtensions\MaybeTests.cs" />
+    <Compile Include="FunctionalExtensions\ResultExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
