--- a/Tests/Architecture3.Logic.Tests/Architecture3.Logic.Tests.csproj
+++ b/Tests/Architecture3.Logic.Tests/Architecture3.Logic.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="CQ\TemplateMethods\Commands\DeleteCommandHandlerTemplateTests.cs" />
     <Compile Include="CQ\TemplateMethods\Commands\UpdateCommandHandlerTemplateTests.cs" />
     <Compile Include="CQ\TemplateMethods\Queries\GetCommandHandlerTemplateTests.cs" />
+    <Compile Include="Facades\Base\HelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MappingTests.cs" />
   </ItemGroup>
