--- a/Projects/Architecture3.Web/Web.config
+++ b/Projects/Architecture3.Web/Web.config
@@ -18,6 +18,10 @@
       </namespaces>
     </pages>
   </system.web.webPages.razor>
+  <appSettings>
+    <add key="log4net.Config" value="log4net.config" />
+    <add key="log4net.Config.Watch" value="True" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
