--- a/Projects/Architecture3.Common.Web/packages.config
+++ b/Projects/Architecture3.Common.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="NuGet.CommandLine" version="3.4.3" targetFramework="net461" developmentDependency="true" />
   <package id="NullGuard.Fody" version="1.4.6" targetFramework="net461" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
 </packages>
