--- a/Projects/Architecture3.Common/packages.config
+++ b/Projects/Architecture3.Common/packages.config
@@ -3,6 +3,7 @@
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="Fody" version="1.29.4" targetFramework="net461" developmentDependency="true" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="NuGet.CommandLine" version="3.4.3" targetFramework="net461" developmentDependency="true" />
   <package id="NullGuard.Fody" version="1.4.6" targetFramework="net461" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
 </packages>
