--- a/Tests/Architecture3.Logic.Tests/packages.config
+++ b/Tests/Architecture3.Logic.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="5.1.1" targetFramework="net461" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net461" />
+  <package id="NuGet.CommandLine" version="3.4.3" targetFramework="net461" developmentDependency="true" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
   <package id="Shouldly" version="2.8.2" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
