--- a/Tests/Architecture3.Web.Tests/packages.config
+++ b/Tests/Architecture3.Web.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net461" />
+  <package id="NuGet.CommandLine" version="3.4.3" targetFramework="net461" developmentDependency="true" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
   <package id="Shouldly" version="2.8.2" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
