--- a/Tests/Architecture3.Logic.Tests/packages.config
+++ b/Tests/Architecture3.Logic.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net461" />
   <package id="NuGet.CommandLine" version="3.4.3" targetFramework="net461" developmentDependency="true" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
+  <package id="NUnit.ConsoleRunner" version="3.5.0" targetFramework="net461" developmentDependency="true"/>
   <package id="Shouldly" version="2.8.2" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
 </packages>
