add MSBuildTasks package

--- a/Projects/Architecture3.Logic/packages.config
+++ b/Projects/Architecture3.Logic/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="5.1.1" targetFramework="net461" />
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="Fody" version="1.29.4" targetFramework="net461" developmentDependency="true" />
+  <package id="MSBuildTasks" version="1.5.0.196" targetFramework="net461" developmentDependency="true" />
   <package id="NuGet.CommandLine" version="3.4.3" targetFramework="net461" developmentDependency="true" />
   <package id="NullGuard.Fody" version="1.4.6" targetFramework="net461" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
