--- a/Projects/Architecture3.Types/packages.config
+++ b/Projects/Architecture3.Types/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fody" version="1.29.4" targetFramework="net461" developmentDependency="true" />
+  <package id="MSBuildTasks" version="1.5.0.196" targetFramework="net461" developmentDependency="true" />
   <package id="NuGet.CommandLine" version="3.4.3" targetFramework="net461" developmentDependency="true" />
   <package id="NullGuard.Fody" version="1.4.6" targetFramework="net461" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
