--- a/Tests/Architecture3.Web.Tests/packages.config
+++ b/Tests/Architecture3.Web.Tests/packages.config
@@ -2,11 +2,12 @@
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="MSBuildTasks" version="1.5.0.196" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net461" />
   <package id="NuGet.CommandLine" version="3.4.3" targetFramework="net461" developmentDependency="true" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
-  <package id="NUnit.ConsoleRunner" version="3.5.0" targetFramework="net461" developmentDependency="true"/>
+  <package id="NUnit.ConsoleRunner" version="3.5.0" targetFramework="net461" developmentDependency="true" />
   <package id="Shouldly" version="2.8.2" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
 </packages>
