--- a/Projects/Architecture3.Web/packages.config
+++ b/Projects/Architecture3.Web/packages.config
@@ -14,6 +14,7 @@
   <package id="MSBuildTasks" version="1.5.0.196" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NuGet.CommandLine" version="3.4.3" targetFramework="net461" developmentDependency="true" />
+  <package id="OctoPack" version="3.4.2" targetFramework="net461" developmentDependency="true" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="SimpleInjector" version="3.2.3" targetFramework="net461" />
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.3" targetFramework="net461" />
