--- a/Projects/Architecture3.Web/Web.config
+++ b/Projects/Architecture3.Web/Web.config
@@ -22,6 +22,9 @@
     <add key="log4net.Config" value="log4net.config" />
     <add key="log4net.Config.Watch" value="True" />
   </appSettings>
+  <connectionStrings>
+    <add name="Main" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=Architecture3;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+  </connectionStrings>  
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
