--- a/Projects/Architecture3.Web/Architecture3.Web.csproj
+++ b/Projects/Architecture3.Web/Architecture3.Web.csproj
@@ -249,6 +249,12 @@
   <ItemGroup>
     <Content Include="log4net.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="connectionStrings.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="connectionStrings.octopus.config" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
