--- a/Projects/Architecture3.Db/App.config
+++ b/Projects/Architecture3.Db/App.config
@@ -7,7 +7,5 @@
     <add key="log4net.Config" value="log4net.config" />
     <add key="log4net.Config.Watch" value="True" />
   </appSettings>
-  <connectionStrings>
-    <add name="Main" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=Architecture3;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="connectionStrings.config" />
 </configuration>
