add common assembly info

--- a/Projects/Architecture3.Web.Dtos/Architecture3.Web.Dtos.csproj
+++ b/Projects/Architecture3.Web.Dtos/Architecture3.Web.Dtos.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Pages\Home\Index\ViewModel.cs" />
     <Compile Include="IPageModel.cs" />
     <Compile Include="Paged.cs" />
