--- a/Tests/Architecture3.Types.Tests/Architecture3.Types.Tests.csproj
+++ b/Tests/Architecture3.Types.Tests/Architecture3.Types.Tests.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="FunctionalExtensions\MaybeTests.cs" />
     <Compile Include="FunctionalExtensions\ResultExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
