--- a/Tests/Architecture3.Common.Tests/Architecture3.Common.Tests.csproj
+++ b/Tests/Architecture3.Common.Tests/Architecture3.Common.Tests.csproj
@@ -62,6 +62,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Database\CommandHelperTests.cs" />
     <Compile Include="Handlers\MediatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
