--- a/Tests/Architecture3.Logic.Tests/Architecture3.Logic.Tests.csproj
+++ b/Tests/Architecture3.Logic.Tests/Architecture3.Logic.Tests.csproj
@@ -62,6 +62,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="CQ\Apis\Product\Delete\CommandHandlerTests.cs" />
     <Compile Include="CQ\Apis\Product\Delete\CommandTests.cs" />
     <Compile Include="CQ\TemplateMethods\Commands\DeleteCommandHandlerTemplateTests.cs" />
