--- a/configs/Architecture3.Db/connectionStrings.config
+++ b/configs/Architecture3.Db/connectionStrings.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <connectionStrings>
-  <add name="Main" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=Architecture3;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+  <add name="Main" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Architecture3;User ID=Architecture3DbOwner;PWD=x;Application Name=Architecture3.DbMigrator" providerName="System.Data.SqlClient" />
 </connectionStrings>
