--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -62,6 +62,7 @@
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AutoMapperConfiguration.cs" />
+    <Compile Include="CQ\Apis\Product\FilterPaged\Columns.cs" />
     <Compile Include="CQ\Pages\Home\Index\Query.cs" />
     <Compile Include="CQ\Pages\Home\Index\QueryHandler.cs" />
     <Compile Include="CQ\Apis\Product\Delete\Command.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="CQ\TemplateMethods\Queries\Interfaces\IGetRepository.cs" />
     <Compile Include="CQ\TemplateMethods\Queries\Interfaces\IId.cs" />
     <Compile Include="Database\DbConnectionProvider.cs" />
+    <Compile Include="CQ\Apis\OrderByParser.cs" />
     <Compile Include="Facades\Base\Helper.cs" />
     <Compile Include="Facades\Pages\HomeIndexFacade.cs" />
     <Compile Include="Facades\Apis\ProductsDeleteFacade.cs" />
